--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
 
 {% block content %}
 <div class="center pad-top7 unh">
-<h2>Thanks for using Django Project Builder!</h2>
+<h2>{{ my_name }} Search Engine</h2>
 <br />
 <p>Feel free to contribute improvements on <a href="https://github.com/prototypemagic/django-projectbuilder">our GitHub page</a></p>
 </div>
